--- a/UI/app/templates/base.html
+++ b/UI/app/templates/base.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% if title %}
-        <title>{{ title }} - **CodeGods**</title>
+        <title>{{ title }} - CodeSearch</title>
         {% else %}
-        <title>**CodeGods**</title>
+        <title>CodeSearch</title>
         {% endif %}
 
         <!-- Favicons -->
@@ -33,7 +33,7 @@
     <body>
         <nav class="navbar  navbar-expand-md sticky-top navbar-dark bg-dark">
             <!-- Navbar content -->
-            <a class="navbar-brand" href="{{ url_for('index') }}">**CodeGods**</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">CodeSearch</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
