--- a/UI/app/templates/get_tagquestions.html
+++ b/UI/app/templates/get_tagquestions.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-12">
       <div class="text-center">
-      <h2 class="mt-2">Get Questions to practice for required tag</h2>
+      <h2 class="mt-2">Get Questions for a tag</h2>
       <br/><br/><br/>
       <form action="" method="post" novalidate>
           {{ form.hidden_tag() }}
