--- a/UI/app/templates/index.html
+++ b/UI/app/templates/index.html
@@ -13,9 +13,9 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="section-headline text-center">
-      <h3><a href="{{ url_for('find_questiontag') }}">Get tags for your Questions!</a></h3>
+      <h3><a href="{{ url_for('find_questiontag') }}">Get tags for a Question!</a></h3>
       <br/><br/>
-      <h3><a href="{{ url_for('get_tagquestions') }}">Get questions for required tag!!</a></h3>
+      <h3><a href="{{ url_for('get_tagquestions') }}">Get questions of a tag!!</a></h3>
     </div>
   </div>
 </div>
